crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the persistence layer.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/happy_path_decision_then_edits.jsonl",
        "byte_offset": 216,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the persistence layer.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/db/config.rs",
    "diff": {
      "path": "src/db/config.rs",
      "old": "let url = \"mysql://localhost/orbit\";",
      "new": "let url = \"postgres://localhost/orbit\";",
      "unified": "@@ -1 +1 @@\n-let url = \"mysql://localhost/orbit\";\n+let url = \"postgres://localhost/orbit\";",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "87884849abc6ce82577d208874169dd8e912a593e2cf556ce0d8e1a5f2d41171"
  },
  {
    "node": "episode",
    "path": "src/db/schema.rs",
    "diff": {
      "path": "src/db/schema.rs",
      "old": "// MySQL dialect\n",
      "new": "// Postgres dialect\nuse sqlx::postgres::PgPool;\n",
      "unified": null,
      "added_lines": 2,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "a758af4d3c7aae84de30d7876c0c2f76f8ea00b3505133ecf7412c381105235e"
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-001:1",
    "to": "episode:87884849abc6ce82577d208874169dd8e912a593e2cf556ce0d8e1a5f2d41171",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-001",
      "used_decision": "decision:copilot-thread-001:1",
      "was_generated_by_session": "copilot-thread-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-001:1",
    "to": "episode:a758af4d3c7aae84de30d7876c0c2f76f8ea00b3505133ecf7412c381105235e",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-001",
      "used_decision": "decision:copilot-thread-001:1",
      "was_generated_by_session": "copilot-thread-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
