crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-101",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres for the orders store. Update the connection module and the schema.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
        "byte_offset": 221,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres for the orders store.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/db.rs",
    "diff": {
      "path": "src/db.rs",
      "old": "use mysql::Pool;",
      "new": "use postgres::Client;",
      "unified": "@@ -1 +1 @@\n-use mysql::Pool;\n+use postgres::Client;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "984effb93de7ee1204efb88b410cf0e0b39f9208dbcf516ae8464a850561c945"
  },
  {
    "node": "episode",
    "path": "src/schema.rs",
    "diff": {
      "path": "src/schema.rs",
      "old": "-- mysql schema",
      "new": "-- postgres schema",
      "unified": "@@ -1 +1 @@\n--- mysql schema\n+-- postgres schema",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "1acbbb529f5867bae27d8d987906a9ea8edba84410482ed5188d338ae03761ab"
  },
  {
    "node": "conversation",
    "session_id": "copilot-thread-101",
    "turn_range": {
      "start": 9,
      "end": 10
    },
    "text": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "switch to",
        "offset": 4
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 62
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/interleaved_arcs.jsonl",
        "byte_offset": 1346,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Now switch to a bounded connection pool in the same db module instead of a single client.",
    "considered_options": [
      {
        "text": "a",
        "chosen": false
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 9,
      "end": 10
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/db.rs",
    "diff": {
      "path": "src/db.rs",
      "old": "use postgres::Client;",
      "new": "use deadpool_postgres::Pool;",
      "unified": "@@ -1 +1 @@\n-use postgres::Client;\n+use deadpool_postgres::Pool;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "0a697d874c8c7e0df8482c8618258b02ec2c808f0cecea7351cdd4b658a72660"
  },
  {
    "node": "episode",
    "path": "src/pool.rs",
    "diff": {
      "path": "src/pool.rs",
      "old": null,
      "new": "pub struct PoolCfg { pub max: usize }",
      "unified": "@@ -0,0 +1 @@\n+pub struct PoolCfg { pub max: usize }",
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "a1a1a1a1a1a1",
      "branch": "main"
    },
    "episode_id": "b4ea4897743981cbe22601d5ac7b453fc4ed2401b82e8de3bafde04c1319bf48"
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-101:1",
    "to": "episode:1acbbb529f5867bae27d8d987906a9ea8edba84410482ed5188d338ae03761ab",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-101",
      "used_decision": "decision:copilot-thread-101:1",
      "was_generated_by_session": "copilot-thread-101",
      "t_use": "2026-06-22T09:00:05Z",
      "t_gen": "2026-06-22T09:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-101:1",
    "to": "episode:984effb93de7ee1204efb88b410cf0e0b39f9208dbcf516ae8464a850561c945",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-101",
      "used_decision": "decision:copilot-thread-101:1",
      "was_generated_by_session": "copilot-thread-101",
      "t_use": "2026-06-22T09:00:05Z",
      "t_gen": "2026-06-22T09:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-101:9",
    "to": "episode:0a697d874c8c7e0df8482c8618258b02ec2c808f0cecea7351cdd4b658a72660",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-101",
      "used_decision": "decision:copilot-thread-101:9",
      "was_generated_by_session": "copilot-thread-101",
      "t_use": "2026-06-22T09:05:00Z",
      "t_gen": "2026-06-22T09:05:04Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-101:9",
    "to": "episode:b4ea4897743981cbe22601d5ac7b453fc4ed2401b82e8de3bafde04c1319bf48",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-101",
      "used_decision": "decision:copilot-thread-101:9",
      "was_generated_by_session": "copilot-thread-101",
      "t_use": "2026-06-22T09:05:00Z",
      "t_gen": "2026-06-22T09:05:04Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  }
]
