crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__multi_edit_single_commit.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-102",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will use Argon2 for password hashing across the auth service. Update the hasher, the verifier, and the config in one pass.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 8
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "We will use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/multi_edit_single_commit.jsonl",
        "byte_offset": 226,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will use Argon2 for password hashing across the auth service.",
    "considered_options": [
      {
        "text": "Argon2",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/auth/hasher.rs",
    "diff": {
      "path": "src/auth/hasher.rs",
      "old": "use bcrypt::hash;",
      "new": "use argon2::Argon2;",
      "unified": "@@ -1 +1 @@\n-use bcrypt::hash;\n+use argon2::Argon2;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "e7de8746ab2c18f0bf9e4142933e2351e213f41e78e22d9d13a6b576658e8f48"
  },
  {
    "node": "episode",
    "path": "src/auth/verifier.rs",
    "diff": {
      "path": "src/auth/verifier.rs",
      "old": "use bcrypt::verify;",
      "new": "use argon2::PasswordVerifier;",
      "unified": "@@ -1 +1 @@\n-use bcrypt::verify;\n+use argon2::PasswordVerifier;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "0f55b46f74ab0cddd83133ba0fb5bc1b75b98ea8c1249606f01831ea57c7f633"
  },
  {
    "node": "episode",
    "path": "config/auth.toml",
    "diff": {
      "path": "config/auth.toml",
      "old": "hash = \"bcrypt\"",
      "new": "hash = \"argon2\"",
      "unified": "@@ -1 +1 @@\n-hash = \"bcrypt\"\n+hash = \"argon2\"",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "fedffc817450e4105ba234cbea25421dd7ce8ab5fe200a0a797ded5029d5bb3a"
  },
  {
    "node": "conversation",
    "session_id": "copilot-thread-102",
    "turn_range": {
      "start": 12,
      "end": 13
    },
    "text": "Perfect, ship it.",
    "markers": [
      {
        "rule_id": "confirmation.idiom",
        "category": "confirmation",
        "matched_text": "ship it",
        "offset": 9
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/multi_edit_single_commit.jsonl",
        "byte_offset": 1827,
        "line_no": 4
      }
    ]
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-102:1",
    "to": "episode:0f55b46f74ab0cddd83133ba0fb5bc1b75b98ea8c1249606f01831ea57c7f633",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-102",
      "used_decision": "decision:copilot-thread-102:1",
      "was_generated_by_session": "copilot-thread-102",
      "t_use": "2026-06-22T14:00:05Z",
      "t_gen": "2026-06-22T14:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-102:1",
    "to": "episode:e7de8746ab2c18f0bf9e4142933e2351e213f41e78e22d9d13a6b576658e8f48",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-102",
      "used_decision": "decision:copilot-thread-102:1",
      "was_generated_by_session": "copilot-thread-102",
      "t_use": "2026-06-22T14:00:05Z",
      "t_gen": "2026-06-22T14:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-102:1",
    "to": "episode:fedffc817450e4105ba234cbea25421dd7ce8ab5fe200a0a797ded5029d5bb3a",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-102",
      "used_decision": "decision:copilot-thread-102:1",
      "was_generated_by_session": "copilot-thread-102",
      "t_use": "2026-06-22T14:00:05Z",
      "t_gen": "2026-06-22T14:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
