crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__no_commitment_marker.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "episode",
    "path": "src/widget.rs",
    "diff": {
      "path": "src/widget.rs",
      "old": "fn render() { }  ",
      "new": "fn render() {}",
      "unified": "@@ -1 +1 @@\n-fn render() { }  \n+fn render() {}",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "e5e5e5e5e5e5",
      "branch": "main"
    },
    "episode_id": "dc302b3c55e37d4ad8963aa608bf2d6d04f8db40d633a72d8212d4ab2da32798"
  }
]
