crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-002",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Stripe instead of PayPal for the payment provider.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 17
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/rejected_alternative.jsonl",
        "byte_offset": 228,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Stripe instead of PayPal for the payment provider.",
    "considered_options": [
      {
        "text": "PayPal",
        "chosen": false
      },
      {
        "text": "Stripe",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/payments/provider.rs",
    "diff": {
      "path": "src/payments/provider.rs",
      "old": "use paypal_sdk::Client;",
      "new": "use stripe::Client;",
      "unified": "@@ -1 +1 @@\n-use paypal_sdk::Client;\n+use stripe::Client;",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "f00dcafe1234",
      "branch": "feat/payments"
    },
    "episode_id": "1b351df7a9cbcdd0092f44ca28904f99a89922befd9cf2866ff41502e8d29bb7"
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-002:1",
    "to": "episode:1b351df7a9cbcdd0092f44ca28904f99a89922befd9cf2866ff41502e8d29bb7",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-002",
      "used_decision": "decision:copilot-thread-002:1",
      "was_generated_by_session": "copilot-thread-002",
      "t_use": "2026-06-22T11:00:08Z",
      "t_gen": "2026-06-22T11:00:14Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
