crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__rewind_compaction.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-103",
    "turn_range": {
      "start": 2,
      "end": 3
    },
    "text": "Use MongoDB for the catalog store. Wire up the document client.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/rewind_compaction.jsonl",
        "byte_offset": 379,
        "line_no": 3
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Use MongoDB for the catalog store.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 2,
      "end": 3
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": "pub struct Store;",
      "new": "use mongodb::Client;\npub struct Store(Client);",
      "unified": "@@ -1 +1,2 @@\n-pub struct Store;\n+use mongodb::Client;\n+pub struct Store(Client);",
      "added_lines": 2,
      "removed_lines": 1
    },
    "git": {
      "sha": "c3c3c3c3c3c3",
      "branch": "main"
    },
    "episode_id": "a3bc3de31705290767828158dea3902dd7b3d7276e54683327edb93266814e6c"
  },
  {
    "node": "conversation",
    "session_id": "copilot-thread-103",
    "turn_range": {
      "start": 8,
      "end": 9
    },
    "text": "On reflection, use Postgres with JSONB for the catalog store instead of MongoDB.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 15
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 61
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/rewind_compaction.jsonl",
        "byte_offset": 1531,
        "line_no": 6
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "On reflection, use Postgres with JSONB for the catalog store instead of MongoDB.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 8,
      "end": 9
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": "use mongodb::Client;\npub struct Store(Client);",
      "new": "use postgres::Client;\npub struct Store(Client);",
      "unified": "@@ -1,2 +1,2 @@\n-use mongodb::Client;\n+use postgres::Client;\n pub struct Store(Client);",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "c3c3c3c3c3c3",
      "branch": "main"
    },
    "episode_id": "1c0d5997aade00eb5f6b1644732e644518b5a758d9d331aa1017b949091169c4"
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-103:2",
    "to": "episode:a3bc3de31705290767828158dea3902dd7b3d7276e54683327edb93266814e6c",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-103",
      "used_decision": "decision:copilot-thread-103:2",
      "was_generated_by_session": "copilot-thread-103",
      "t_use": "2026-06-22T15:01:00Z",
      "t_gen": "2026-06-22T15:01:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-103:8",
    "to": "episode:1c0d5997aade00eb5f6b1644732e644518b5a758d9d331aa1017b949091169c4",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-103",
      "used_decision": "decision:copilot-thread-103:8",
      "was_generated_by_session": "copilot-thread-103",
      "t_use": "2026-06-22T15:10:00Z",
      "t_gen": "2026-06-22T15:10:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
