crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__subagent_thread.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-104",
    "turn_range": {
      "start": 3,
      "end": 4
    },
    "text": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 20
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 70
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/subagent_thread.jsonl",
        "byte_offset": 730,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "considered_options": [
      {
        "text": "the",
        "chosen": false
      },
      {
        "text": "a",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 3,
      "end": 4
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/ingest/parser.rs",
    "diff": {
      "path": "src/ingest/parser.rs",
      "old": "let buf = read_all(input);",
      "new": "let mut reader = PullParser::new(input);",
      "unified": "@@ -1 +1 @@\n-let buf = read_all(input);\n+let mut reader = PullParser::new(input);",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "d4d4d4d4d4d4",
      "branch": "main"
    },
    "episode_id": "eb65e8bf84e596710297da4f42506db28f15be63dc92ba2a7a85d95335e655ac"
  },
  {
    "node": "binding",
    "from": "decision:copilot-thread-104:3",
    "to": "episode:eb65e8bf84e596710297da4f42506db28f15be63dc92ba2a7a85d95335e655ac",
    "relation": "produced",
    "prov": {
      "used_session": "copilot-thread-104",
      "used_decision": "decision:copilot-thread-104:3",
      "was_generated_by_session": "copilot-thread-104",
      "t_use": "2026-06-22T16:01:00Z",
      "t_gen": "2026-06-22T16:01:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
