crates/memscribe-testkit/tests/snapshots/nodes__copilot__v1__tool_failure.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "copilot-thread-004",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Add a NOT NULL constraint to the users.email column.",
    "markers": [
      {
        "rule_id": "action.bare_imperative",
        "category": "action_request",
        "matched_text": "Add a NOT",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/copilot/v1/tool_failure.jsonl",
        "byte_offset": 223,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Add a NOT NULL constraint to the users.email column.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "statistically_ranked",
    "timestamp": "2026-06-22T13:00:07Z"
  }
]
